[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/MissionItem.gd" type="Script" id=2]

[node name="LevelGridContainer" type="GridContainer"]
margin_right = 177.0
margin_bottom = 106.0
script = ExtResource( 2 )

[node name="LevelNameLabel" type="Label" parent="."]
margin_right = 177.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Tutorial Level"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 177.0
margin_bottom = 82.0

[node name="MapViewTextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 177.0
margin_bottom = 64.0

[node name="AmountOfEnemiesLabel" type="Label" parent="HBoxContainer/GridContainer"]
margin_right = 109.0
margin_bottom = 14.0
text = "Enemys: 10"

[node name="AmountOfExperiencesLabel" type="Label" parent="HBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 109.0
margin_bottom = 32.0
text = "Experiences: 200"

[node name="DifficultyOptionButton" type="OptionButton" parent="HBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 109.0
margin_bottom = 56.0

[node name="PlayButton" type="Button" parent="."]
margin_top = 86.0
margin_right = 177.0
margin_bottom = 106.0
text = "Play"
